[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pltLib"
version = "1.0.0"
description = "Streamsets SDK Wrapper"
authors = [
    { name = "Jean-Marie Bertoncelli", email = "xxx@yyy.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["StreamSets", "SDK"]
classifiers = [
    "License :: OSI Approved  :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Streamsets/SDK",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    'cryptography>=42.0.5',
    'streamsets>=6.2.0',
    'chardet>=4.0.0'
]
